--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,13 @@
           </div>
           <div class="collapse navbar-collapse" id="main-nav-collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/about">About</a></li>
+              <li><a href="/about" color=white>About</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div>
       </nav>
-    
+
     <%= yield %>
-    
+
   </body>
 </html>
