--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
+<div class="container text-center">
 <h1>About Me</h1>
+<p>We are DevMatch. Our company focuses on creating an exclusive community
+for developers and entrepreneurs to meet. lorem</p>
+</div>
